k8s/products-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: products
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: products
    spec:
      containers:
      - image: maximilianou/products
        name: products
        resources: {}
status: {}
